--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "cheerio": "latest",
     "request": "latest",
-    "sqlite3": "latest"
+    "sqlite3": "latest",
+    "osmosis": "^1.1.6"
   },
   "keywords": [
     "scraper",
