--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "version": "0.0.1",
   "main": "scraper.js",
   "dependencies": {
-    "cheerio": "latest",
-    "request": "latest",
-    "sqlite3": "latest",
-    "osmosis": "^1.1.6"
+    "osmosis": "^1.1.6",
+    "sqlite3": "latest"
+  },
+  "scripts": {
+    "start": "node scraper.js"
   },
   "keywords": [
     "scraper",
