--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "version": "0.0.1",
   "main": "scraper.js",
+  "engines": {
+    "node": "8.9.4"
+  },
   "dependencies": {
     "osmosis": "^1.1.6",
     "sqlite3": "latest"
